Pre-API, functioning project

--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -19,7 +19,21 @@
 </head>
 
 <body>
-    <div>HEY</div>
+    <div id="header-wrap">
+        <topBar id="top" class="animation-target">
+            HEY!
+        </topBar>
+    </div>
+    <div id="mainWrapper">
+        <map id="restMap"></map>
+        <div id="restDisplay"></div>
+    </div>
+    <div id="bottom-wrapper">
+        <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon"
+                src="/icons/facebook.png" alt="facebook"><img class="icon" src="/icons/instagram.png" alt="instagram">
+            <img class="icon" src="/icons/twitter.png" alt="twitter"></footer>
+    </div>
+    <script src="/restaurant.js"></script>
 </body>
 
 </html>
