--- a/public/index.html
+++ b/public/index.html
@@ -14,24 +14,30 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-  <link rel="stylesheet" href="/public/index.css">
+  <link rel="stylesheet" href="/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <topBar id="top">
-    PHELP!
-  </topBar>
+  <div id="header-wrap">
+    <topBar id="top" class="animation-target">
+      PHELP!
+    </topBar>
+  </div>
   <div id="mainWrapper">
     <map id="mainMap"></map>
     <div id="display"></div>
   </div>
-  <bottomBar id="bottom">
-    <input id="searchBar" type="text" placeholder="Restaurants">
-    <button id="go">go</button>
-  </bottomBar>
-
-  <script src="/public/index.js"></script>
+  <div id="bottom-wrapper">
+    <bottomBar id="bottom">
+      <input id="searchBar" class="hover-class" type="text" placeholder="Restaurants">
+      <button id="go" class="hover-class">go</button>
+    </bottomBar>
+    <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon" src="/icons/facebook.png"
+        alt="facebook"><img class="icon" src="/icons/instagram.png" alt="instagram"> <img class="icon"
+        src="/icons/twitter.png" alt="twitter"></footer>
+  </div>
+  <script src="/index.js"></script>
 </body>
 
 </html>
