Just need desktop and comment

--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -20,13 +20,17 @@
 
 <body>
     <div id="header-wrap">
-        <topBar id="top" class="animation-target">
-            HEY!
-        </topBar>
+        <a id="top" href="/index.html">
+            <topBar>
+            </topBar>
+        </a>
     </div>
     <div id="mainWrapper">
         <map id="restMap"></map>
-        <div id="restDisplay"></div>
+        <div id="restDisplay">
+            <div id="info"></div>
+            <div id="comments"></div>
+        </div>
     </div>
     <div id="bottom-wrapper">
         <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon"
