--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,11 @@
 
 <body>
   <div id="header-wrap">
-    <topBar id="top" class="animation-target">
-      PHELP!
-    </topBar>
+    <a id="top" href="/index.html">
+      <topBar>
+        PHELP!
+      </topBar>
+    </a>
   </div>
   <div id="mainWrapper">
     <map id="mainMap"></map>
@@ -30,7 +32,7 @@
   </div>
   <div id="bottom-wrapper">
     <bottomBar id="bottom">
-      <input id="searchBar" class="hover-class" type="text" placeholder="Restaurants">
+      <input id="searchBar" class="hover-class" type="text" value="Burlington, VT" placeholder="Restaurants">
       <button id="go" class="hover-class">go</button>
     </bottomBar>
     <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon" src="/icons/facebook.png"
