local storage comments

--- a/public/index.html
+++ b/public/index.html
@@ -19,25 +19,27 @@
 </head>
 
 <body>
-  <div id="header-wrap">
-    <a id="top" href="/index.html">
-      <topBar>
-        PHELP!
-      </topBar>
-    </a>
-  </div>
-  <div id="mainWrapper">
-    <map id="mainMap"></map>
-    <div id="display"></div>
-  </div>
-  <div id="bottom-wrapper">
-    <bottomBar id="bottom">
-      <input id="searchBar" class="hover-class" type="text" value="Burlington, VT" placeholder="Restaurants">
-      <button id="go" class="hover-class">go</button>
-    </bottomBar>
-    <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon" src="/icons/facebook.png"
-        alt="facebook"><img class="icon" src="/icons/instagram.png" alt="instagram"> <img class="icon"
-        src="/icons/twitter.png" alt="twitter"></footer>
+  <div id="canvas">
+    <div id="header-wrap">
+      <a id="top" href="/index.html">
+        <topBar>
+          PHELP!
+        </topBar>
+      </a>
+    </div>
+    <div id="mainWrapper">
+      <map id="mainMap"></map>
+      <div id="display"></div>
+    </div>
+    <div id="bottom-wrapper">
+      <bottomBar id="bottom">
+        <input id="searchBar" class="hover-class" type="text" value="Burlington, VT" placeholder="Restaurants">
+        <button id="go" class="hover-class">go</button>
+      </bottomBar>
+      <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon"
+          src="/icons/facebook.png" alt="facebook"><img class="icon" src="/icons/instagram.png" alt="instagram"> <img
+          class="icon" src="/icons/twitter.png" alt="twitter"></footer>
+    </div>
   </div>
   <script src="/index.js"></script>
 </body>
