Ready, except leaflet markers inaccurate

--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -30,14 +30,14 @@
             <map id="restMap"></map>
             <div id="restDisplay">
                 <div id="info"></div>
-                <div id="comments"></div>
+                <div id="notes"></div>
                 <div id="added-comments"></div>
                 <br>
                 <br>
                 <br>
-                <br>
                 <div id="comment-form">
-                    <textarea name="comment-box" id="comment-box" cols="59" rows="2" value="hey"></textarea><button id="submit-button">submit</button>
+                    <textarea name="comment-box" id="comment-box" cols="59" rows="2" value="hey"></textarea><button
+                        id="submit-button">submit</button><button id="clear-button">clear</button>
                 </div>
             </div>
         </div>
