--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!--JS generated restaurant pages, rendered with restaurant.js-->
     <div id="canvas">
         <div id="header-wrap">
             <a id="top" href="/index.html">
@@ -26,11 +27,13 @@
                 </topBar>
             </a>
         </div>
+        <!--all ids with "rest" as a prefix are variations of index.html-->
         <div id="mainWrapper">
             <map id="restMap"></map>
             <div id="restDisplay">
                 <div id="info"></div>
                 <div id="notes"></div>
+                <div id="comment-header">COMMENTS</div>
                 <div id="added-comments"></div>
                 <br>
                 <br>
@@ -41,6 +44,7 @@
                 </div>
             </div>
         </div>
+        <!--social media footer, unlinked (because no social media)-->
         <div id="bottom-wrapper">
             <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon"
                     src="/icons/facebook.png" alt="facebook"><img class="icon" src="/icons/instagram.png"
