--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PHELP!</title>
+
+  <!--Fonts, leaflet.css, leaflet.js,jQuery (in that order) -->
   <link
     href="https://fonts.googleapis.com/css?family=Fira+Sans|Libre+Baskerville|Playfair+Display|Quicksand&display=swap"
     rel="stylesheet">
@@ -17,6 +19,7 @@
   <link rel="stylesheet" href="/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
+<!-- main content generated with index.js -->
 
 <body>
   <div id="canvas">
@@ -27,9 +30,10 @@
         </topBar>
       </a>
     </div>
+    <!-- where content is namely rendered -->
     <div id="mainWrapper">
       <map id="mainMap"></map>
-      <div id="display"></div>
+      <div id="display">(...hit go)</div>
     </div>
     <div id="bottom-wrapper">
       <bottomBar id="bottom">
