Final (canvas formatted)

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     </div>
     <div id="bottom-wrapper">
       <bottomBar id="bottom">
-        <input id="searchBar" class="hover-class" type="text" value="Burlington, VT" placeholder="Restaurants">
+        <input id="searchBar" class="hover-class1" type="text" value="Burlington, VT" placeholder="Restaurants">
         <button id="go" class="hover-class">go</button>
       </bottomBar>
       <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon"
