--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/resources/stylesheets/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <!-- main content generated with index.js -->
@@ -40,12 +40,12 @@
         <input id="searchBar" class="hover-class1" type="text" value="Burlington, VT" placeholder="Restaurants">
         <button id="go" class="hover-class">go</button>
       </bottomBar>
-      <footer id="footer"><img class="icon" src="/icons/email.png" alt="email"><img class="icon"
-          src="/icons/facebook.png" alt="facebook"><img class="icon" src="/icons/instagram.png" alt="instagram"> <img
-          class="icon" src="/icons/twitter.png" alt="twitter"></footer>
+      <footer id="footer"><img class="icon" src="/resources/icons/email.png" alt="email"><img class="icon"
+          src="/resources/icons/facebook.png" alt="facebook"><img class="icon" src="/resources/icons/instagram.png"
+          alt="instagram"> <img class="icon" src="/resources/icons/twitter.png" alt="twitter"></footer>
     </div>
   </div>
-  <script src="/index.js"></script>
+  <script src="/resources/scripts/index.js"></script>
 </body>
 
 </html>
